Add table to markdown tool

--- a/languages/default.yml
+++ b/languages/default.yml
@@ -70,3 +70,5 @@ payreprint: to pay for reprinting.
 pleaseFollowReprintPolicy: Copied successfully, please follow the reprint policy of this article
 checkPolicy: more
 language: Chinese
+table2markdown: Excel to Markdown Converter
+tools: Tools
