--- a/languages/zh-CN.yml
+++ b/languages/zh-CN.yml
@@ -70,3 +70,5 @@ payreprint: 付费转载。
 pleaseFollowReprintPolicy: 复制成功，请遵循本文的转载规则
 checkPolicy: 查看
 language: 语言
+table2markdown: Excel → Markdown 表格转换器
+tools: 工具箱
